WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37993
Assertion failure in AnimationBase::updateStateMachine() coming out of paused state
https://bugs.webkit.org/show_bug.cgi?id=37993
Summary
Assertion failure in AnimationBase::updateStateMachine() coming out of paused...
Chris Marrin
Reported
2010-04-22 10:29:33 PDT
This is rare and hard to reproduce, but if you go into pause state when in the AnimationStateStartWaitStyleAvailable, the state of m_pauseTime is incorrect, leading to an assert when coming out of pause state.
Attachments
Patch
(10.43 KB, patch)
2010-07-21 14:51 PDT
,
Chris Marrin
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Marrin
Comment 1
2010-07-21 11:44:10 PDT
It's actually easy to reproduce, but you have to use the "pause API" (a feature available in LayoutTests) to get it to happen. You simply run a debug build, start a transition and then pause and unpause. The assert is usually hit. I will try to post a test.
Chris Marrin
Comment 2
2010-07-21 14:49:30 PDT
It's actually easy to reproduce, but you have to use the "pause API" (a feature available in LayoutTests) to get it to happen. You simply run a debug build, start a transition and then pause and unpause. The assert is usually hit. I will try to post a test.
Chris Marrin
Comment 3
2010-07-21 14:51:03 PDT
Created
attachment 62236
[details]
Patch
Simon Fraser (smfr)
Comment 4
2010-07-21 14:56:02 PDT
Comment on
attachment 62236
[details]
Patch
> Index: WebCore/ChangeLog > ===================================================================
> +
https://bugs.webkit.org/show_bug.cgi?id=37993
The bug title should be on the line above the url ("webkit-patch upload" will do this for you). r=me
Chris Marrin
Comment 5
2010-07-21 16:16:59 PDT
Patch landed in
http://trac.webkit.org/changeset/63862
Csaba Osztrogonác
Comment 6
2010-07-22 06:12:25 PDT
After this patch animations/play-state.html is flakey on Qt bot:
http://build.webkit.org/results/Qt%20Linux%20Release/r63884%20%2815890%29/animations/play-state-pretty-diff.html
Could you check what the problem is?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug